@@ -6,8 +6,20 @@ public final class Config {
 
   // Debug
   public static ForgeConfigSpec.BooleanValue debug_mod_detection;
-  public static ForgeConfigSpec.BooleanValue dump_tags;
   public static ForgeConfigSpec.BooleanValue dump_map_colors;
+
+  public static ForgeConfigSpec.BooleanValue dump_block_tags;
+  public static ForgeConfigSpec.BooleanValue dump_item_tags;
+  public static ForgeConfigSpec.BooleanValue dump_entity_tags;
+  public static ForgeConfigSpec.BooleanValue dump_biome_tags;
+  // public static ForgeConfigSpec.BooleanValue dump_enchantment_tags;
+  public static ForgeConfigSpec.BooleanValue dump_damage_type_tags;
+  public static ForgeConfigSpec.BooleanValue dump_game_event_tags;
+  public static ForgeConfigSpec.BooleanValue dump_fluid_tags;
+  public static ForgeConfigSpec.BooleanValue dump_poi_tags;
+  public static ForgeConfigSpec.BooleanValue dump_structure_tags;
+  public static ForgeConfigSpec.BooleanValue dump_banner_pattern_tags;
+  public static ForgeConfigSpec.BooleanValue dump_painting_variant_tags;
 
   // Music Box
   public static ForgeConfigSpec.BooleanValue enable_left_hand;
@@ -29,9 +41,22 @@ public final class Config {
   public Config(final ForgeConfigSpec.Builder builder){
 
     builder.push("Debug");
-    debug_mod_detection = builder.define("Print Mod Detection Results", false);
-    dump_tags           = builder.define("Dump Block & Item Tags", false);
-    dump_map_colors     = builder.define("Dump Map Colors", false);
+      debug_mod_detection = builder.define("Print Mod Detection Results", false);
+      dump_map_colors     = builder.define("Dump Map Colors", false);
+      builder.push("Dump Tags");
+                   dump_block_tags = builder.define("Dump Block Tags", false);
+                    dump_item_tags = builder.define("Dump Item Tags", false);
+                  dump_entity_tags = builder.define("Dump Entity Tags", false);
+                   dump_biome_tags = builder.define("Dump Biome Tags", false);
+        //     dump_enchantment_tags = builder.define("Dump Enchantment Tags", false);
+             dump_damage_type_tags = builder.define("Dump Damage Types Tags", false);
+              dump_game_event_tags = builder.define("Dump Game Event Tags", false);
+                   dump_fluid_tags = builder.define("Dump Fluid Tags", false);
+                     dump_poi_tags = builder.define("Dump POI Tags", false);
+               dump_structure_tags = builder.define("Dump Structure Tags", false);
+          dump_banner_pattern_tags = builder.define("Dump Banner Pattern Tags", false);
+        dump_painting_variant_tags = builder.define("Dump Painting Variant Tags", false);
+      builder.pop();
     builder.pop();
 
     builder.push("Music Box");
